feat: Add license status display and bulk selection features.

--- a/index.html
+++ b/index.html
@@ -924,6 +924,10 @@
                     <ul style="margin: 0; padding-left: 16px; color: var(--text-secondary);">
                         <li><strong>Sidebar:</strong> Filter by All / Source / Fork repositories</li>
                         <li><strong>View Toggle:</strong> Switch between List and Grid views</li>
+                        <li><strong>Bulk Selection:</strong> Use <strong>Select All</strong> to manage repos on current
+                            page</li>
+                        <li><strong>License Status:</strong> Check color-coded badges for MIT, other licenses, or no
+                            license</li>
                         <li><strong>Double-click:</strong> Open detailed repository info modal</li>
                         <li><strong>Search:</strong> Filter repositories by name</li>
                     </ul>
